crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E501_E501_3.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501_3.py:11:89: E501 Line too long (89 > 88)
   |
10 | # Error (89 characters)
11 | "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:" + "shape:aaaa"  # type: ignore
   |                                                                                         ^ E501
   |
   = help: Break statement over multiple lines, or add # noqa flag
