crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__E501_fix_E501.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
fix_E501.py:2:89: E501 [*] Line too long (445 > 88)
  |
1 | …
2 | …didunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
3 | …
  |
  = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
1 1 | """
2   |-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  2 |+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
  3 |+incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
3 4 | """
4 5 | 
5 6 | import os

fix_E501.py:8:89: E501 [*] Line too long (125 > 88)
   |
 8 | …dipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
 9 | …
10 | …onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
5  5  | import os
6  6  | 
7  7  | 
8     |-# Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   8  |+# Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   9  |+# incididunt ut labore et dolore magna aliqua.
9  10 | 
10 11 | myvar = 42  # Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
11 12 | 

fix_E501.py:10:89: E501 [*] Line too long (137 > 88)
   |
 8 | …ing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 9 | …
10 | …etur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
7  7  | 
8  8  | # Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
9  9  | 
10    |-myvar = 42  # Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
11 10 | 
   11 |+# Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   12 |+myvar = 42
   13 |+
12 14 | 
13 15 | def myfunc():
14 16 |     """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""

fix_E501.py:14:89: E501 [*] Line too long (133 > 88)
   |
13 | def myfunc():
14 |     """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
15 |
16 |     mystring = (
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
11 11 | 
12 12 | 
13 13 | def myfunc():
14    |-    """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""
   14 |+    """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   15 |+    incididunt ut labore et dolore magna aliqua."""
15 16 | 
16 17 |     mystring = (
17 18 |         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."

fix_E501.py:17:89: E501 [*] Line too long (133 > 88)
   |
16 |     mystring = (
17 |         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
18 |     )
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
14 14 |     """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""
15 15 | 
16 16 |     mystring = (
17    |-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   17 |+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod "
   18 |+        "tempor incididunt ut labore et dolore magna aliqua."
18 19 |     )
19 20 | 
20 21 |     print(

fix_E501.py:21:89: E501 [*] Line too long (133 > 88)
   |
20 |     print(
21 |         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
22 |     )
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
18 18 |     )
19 19 | 
20 20 |     print(
21    |-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   21 |+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod "
   22 |+        "tempor incididunt ut labore et dolore magna aliqua."
22 23 |     )
23 24 | 
24 25 |     print(

fix_E501.py:25:89: E501 [*] Line too long (134 > 88)
   |
24 |     print(
25 |         "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
26 |         myvar,
27 |     )
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
22 22 |     )
23 23 | 
24 24 |     print(
25    |-        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
   25 |+        (
   26 |+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod ",
   27 |+            "tempor incididunt ut labore et dolore magna aliqua.",
   28 |+        ),
26 29 |         myvar,
27 30 |     )
28 31 | 

fix_E501.py:31:89: E501 [*] Line too long (137 > 88)
   |
29 | …
30 | …
31 | …tur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   |                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
32 | …
33 | …
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
28 28 | 
29 29 |     print(
30 30 |         (
31    |-            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   31 |+            "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod "
   32 |+            "tempor incididunt ut labore et dolore magna aliqua."
32 33 |         ),
33 34 |         myvar,
34 35 |     )

fix_E501.py:37:89: E501 [*] Line too long (142 > 88)
   |
36 | …
37 | …dipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. {myvar}"
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
38 | …
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
34 34 |     )
35 35 | 
36 36 |     print(
37    |-        f"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. {myvar}"
   37 |+        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod "
   38 |+        f"tempor incididunt ut labore et dolore magna aliqua. {myvar}"
38 39 |     )
39 40 | 
40 41 |     print(

fix_E501.py:42:89: E501 [*] Line too long (131 > 88)
   |
40 |     print(
41 |         """
42 |         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
43 |         """
44 |     )
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
39 39 | 
40 40 |     print(
41 41 |         """
42    |-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   42 |+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   43 |+        incididunt ut labore et dolore magna aliqua.
43 44 |         """
44 45 |     )
45 46 | 

fix_E501.py:49:89: E501 [*] Line too long (164 > 88)
   |
47 | …
48 | …          dolor sit amet,
49 | … eiusmod tempor       incididunt ut labore et dolore magna aliqua. Ut enim ad minim       veniam, quis
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
50 | …
51 | …
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
46 46 |     # possibly break formatting when edge case strings are not flagged as noqa
47 47 |     danger = """
48 48 |         Lorem ipsum                                                     dolor sit amet,
49    |-            consectetur adipiscing elit,                sed do eiusmod tempor       incididunt ut labore et dolore magna aliqua. Ut enim ad minim       veniam, quis
   49 |+            consectetur adipiscing elit,                sed do eiusmod tempor      
   50 |+            incididunt ut labore et dolore magna aliqua. Ut enim ad minim       veniam, quis
50 51 |     nostrud exercitation                        ullamco
51 52 |      """
52 53 | 

fix_E501.py:62:89: E501 [*] Line too long (130 > 88)
   |
60 |     # docstring edge case #1
61 |     """
62 |     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
63 |
64 |     # docstring edge case #2
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
59 59 | 
60 60 |     # docstring edge case #1
61 61 |     """
62    |-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""
   62 |+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   63 |+    incididunt ut labore et dolore magna aliqua."""
63 64 | 
64 65 |     # docstring edge case #2
65 66 |     """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.

fix_E501.py:65:89: E501 [*] Line too long (130 > 88)
   |
64 |     # docstring edge case #2
65 |     """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   |                                                                                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
66 |     """
   |
   = help: Break statement over multiple lines, or add # noqa flag

ℹ Unsafe fix
62 62 |     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."""
63 63 | 
64 64 |     # docstring edge case #2
65    |-    """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
   65 |+    """Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
   66 |+    incididunt ut labore et dolore magna aliqua.
66 67 |     """
67 68 | 
68 69 |     # unsupported examples

fix_E501.py:71:89: E501 Line too long (136 > 88)
   |
70 | …ope
71 | …ur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.")
   |                                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
72 | …
73 | …
   |
   = help: Break statement over multiple lines, or add # noqa flag

fix_E501.py:79:89: E501 Line too long (143 > 88)
   |
78 | …
79 | …ctetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
80 | …
81 | …
   |
   = help: Break statement over multiple lines, or add # noqa flag

fix_E501.py:83:89: E501 Line too long (140 > 88)
   |
81 | …
82 | …
83 | …tetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
   |                                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ E501
84 | …
   |
   = help: Break statement over multiple lines, or add # noqa flag
