crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__tab_size_4.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E501_2.py:2:7: E501 Line too long (7 > 6)
  |
1 | # aaaa
2 | # aaaaa
  |       ^ E501
3 |     # a
4 |     # a
  |
  = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:3:7: E501 Line too long (7 > 6)
  |
1 | # aaaa
2 | # aaaaa
3 |     # a
  |       ^ E501
4 |     # a
5 |     # aa
  |
  = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:4:4: E501 Line too long (7 > 6)
  |
2 | # aaaaa
3 |     # a
4 |     # a
  |       ^ E501
5 |     # aa
6 |     # aaa
  |
  = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:5:4: E501 Line too long (8 > 6)
  |
3 |     # a
4 |     # a
5 |     # aa
  |       ^^ E501
6 |     # aaa
7 |     # aaaa
  |
  = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:6:4: E501 Line too long (9 > 6)
  |
4 |     # a
5 |     # aa
6 |     # aaa
  |       ^^^ E501
7 |     # aaaa
8 |         # a
  |
  = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:7:4: E501 Line too long (10 > 6)
  |
5 |     # aa
6 |     # aaa
7 |     # aaaa
  |       ^^^^ E501
8 |         # a
9 |         # aa
  |
  = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:8:3: E501 Line too long (11 > 6)
   |
 6 |     # aaa
 7 |     # aaaa
 8 |         # a
   |         ^^^ E501
 9 |         # aa
10 |         # aaa
   |
   = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:9:3: E501 Line too long (12 > 6)
   |
 7 |     # aaaa
 8 |         # a
 9 |         # aa
   |         ^^^^ E501
10 |         # aaa
   |
   = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:10:3: E501 Line too long (13 > 6)
   |
 8 |         # a
 9 |         # aa
10 |         # aaa
   |         ^^^^^ E501
11 |
12 | if True: # noqa: E501
   |
   = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:14:4: E501 Line too long (9 > 6)
   |
12 | if True: # noqa: E501
13 |     [12]
14 |     [12 ]
   |       ^^^ E501
15 |     [1,2]
16 |     [1, 2]
   |
   = help: Break statement over multiple lines, or add # noqa flag

E501_2.py:16:4: E501 Line too long (10 > 6)
   |
14 |     [12 ]
15 |     [1,2]
16 |     [1, 2]
   |       ^^^^ E501
   |
   = help: Break statement over multiple lines, or add # noqa flag
